--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,8 @@ dependencies {
     compile 'com.android.support:design:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.1.1@aar') {
+        transitive=true
+    }
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
 }
