--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
     compile 'com.google.firebase:firebase-messaging:11.0.2'
+    compile 'com.android.support:support-annotations:25.3.1'
 }
 apply plugin: 'com.google.gms.google-services'
