--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,11 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    //picasso caching
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    //buterknife
+    compile 'com.jakewharton:butterknife:8.8.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
 }
