--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,10 @@ dependencies {
     //    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     //    annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
+    //picasso caching
     testCompile 'junit:junit:4.12'
+
+    //buterknife
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
@@ -71,11 +74,11 @@ dependencies {
     compile 'com.android.support:support-v4:26.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
-    //picasso caching
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
-    testCompile 'junit:junit:4.12'
-
-    //buterknife
     compile 'com.jakewharton:butterknife:8.8.0'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
