--- a/circle.yml
+++ b/circle.yml
@@ -22,6 +22,7 @@ dependencies:
         - chmod +x gradlew
     pre:
         - touch app/google-services.json
+        - echo $GCLOUD_SERVICE_KEY | base64 --decode --ignore-garbage > ${HOME}/FinalProject-01779512aca4.json
         - echo $GOOGLE_SERVICES | base64 --decode > ~/$CIRCLE_PROJECT_REPONAME/app/google-services.json
         - echo y | android update sdk --no-ui --all --filter "tools,android-25,build-tools-25.0.3,platform-tools,extra-android-m2repository,extra-android-support,extra-google-m2repository,extra-google-google_play_services,com.google.firebase:firebase-messaging:10.0.1"
         - echo y | $ANDROID_HOME/tools/bin/sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
